# revm-sp1

bn/: Cargo.toml
bn/src/: arith.rs  lib.rs
bn/src/fields/: fp.rs
bn/src/groups/: mod.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
revm/crates/precompile/: Cargo.toml
revm/crates/precompile/src/: bn128.rs
script/: Cargo.toml
script/src/: main.rs
