[package]
name = "substrate-bn"
version = "0.6.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Parity Technologies <admin@parity.io>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/paritytech/bn"
repository = "https://github.com/paritytech/bn"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = []

[[bench]]
name = "api"

[dependencies]
#cfg-if = "1.0.0"
rand = { version = "0.8.3", default-features = false }
bytemuck = "1.15.0"
byteorder = { version = "1.0", features = ["i128"], default-features = false }
crunchy = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hex = "0.4.3"
rustc-hex = { version = "2", default-features = false }

[dev-dependencies]
rand = { version = "0.8.3", features = ["std_rng"] }

